--- a/sections/video--video-hero.liquid
+++ b/sections/video--video-hero.liquid
@@ -96,7 +96,14 @@
     data-wetheme-section-type="video--video-hero"
     data-wetheme-section-id="{{ section.id }}"
 >
+
     <div class="hero-video--wrapper">
+
+        {% comment %}
+            ## Changes
+        {% endcomment %}
+
+
         <div class="hero-video--media type-{{ type }}">
           <wetheme-video
             section-id="{{ section.id }}"
