--- a/sections/image--slideshow.liquid
+++ b/sections/image--slideshow.liquid
@@ -133,6 +133,9 @@
                                                 <div class="homepage-featured-content-box{% if overlay_text %} slideshow-mobile-overlay-text{% endif %}">
                                                     <div class="featured-content-box--border"></div>
                                                     <div class="homepage-featured-content-box-inner wow fadeInUp {% if block.settings.mobile_image == blank and section.settings.show-slide-dots %} mobile-dot-nav-spacing{% endif %}">
+                                                        
+                                                        <div class="featured-image--block"></div>    
+
                                                         <div class="feature-content-box--border feature--inner-content">
                                                         {% if block.settings.title != blank %}
                                                             <div class="sitewide--title-wrapper slideshow-title">
@@ -236,6 +239,10 @@
 </div>
 
 <style>
+    .homepage-sections--title {
+        text-transform: unset;
+    }
+    
     .spacer--block {
         height: 160px;
         padding: 6px 0;
