--- a/sections/image--slideshow.liquid
+++ b/sections/image--slideshow.liquid
@@ -177,8 +177,11 @@
                                                         max-width: 550px;
                                                     }
 
+                                                    .homepage-featured-content-box {
+                                                        background-color: rgba(0, 0, 0, 0.7) !important;
+                                                    }
+
                                                     .homepage-featured-content-box-inner {
-                                                        background-color: rgba(0, 0, 0, 0.7);
                                                         height: 60vh;
                                                     }
 
