before dark theme creating

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -481,6 +481,13 @@ Testing Cypress integration
   </nav>
 </div>
 
+{% comment %}
+  Render Restricted age popup
+{% endcomment %}
+
+{% render 'restricted-age-popup' %}
+
+
 <style>
 
   :root {
