--- a/sections/products--featured-product.liquid
+++ b/sections/products--featured-product.liquid
@@ -398,6 +398,14 @@
   {% endcase %}
 {% endfor %}
 
+<style>
+  .product-medias__media > img {
+    height: auto !important;
+    width: 80% !important;
+    margin: 0 auto;
+  }
+</style>
+
 
 {% schema %}
 {
