--- a/sections/image--slideshow.liquid
+++ b/sections/image--slideshow.liquid
@@ -577,8 +577,8 @@
                     "type": "image_picker",
                     "id": "hero_icon",
                     "label": {
-                        "en": "Hero Image (Optional)",
-                        "de": "Hero Bild (optional)"
+                        "en": "Hero Image (Required)",
+                        "de": "Hero Bild (Required)"
                     },
                     "info": {
                         "en": "1400 x 1400px recommended",
